feat: init2 hw4

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <h2 class="visually-hidden">Our values</h2>
         <ul class="list box-position">
           <li class="filter-photos-list">
+            <div class="icon-second-section-index">
+              <svg>
+                <use href="./images/icons.svg#icon-antenna-1" width="64" height="64"></use>
+              </svg>
+            </div>
             <h3 class="first-header box-title">Strategy</h3>
             <p class="list-first">
               Our goal is to identify the business problem to walk away with the
@@ -56,6 +61,11 @@
             </p>
           </li>
           <li class="filter-photos-list">
+            <div class="icon-second-section-index">
+              <svg>
+                <use href="./images/icons.svg#icon-clock-1" width="64" height="64"></use>
+              </svg>
+            </div>
             <h3 class="first-header box-title">Punctuality</h3>
             <p class="list-first">
               Bring the key message to the brand's audience for the best price
@@ -63,6 +73,11 @@
             </p>
           </li>
           <li class="filter-photos-list">
+            <div class="icon-second-section-index">
+              <svg>
+                <use href="./images/icons.svg#icon-diagram-1" width="64" height="64"></use>
+              </svg>
+            </div>
             <h3 class="first-header box-title">Diligence</h3>
             <p class="list-first">
               Research and confirm brands that present the strongest digital
@@ -70,6 +85,11 @@
             </p>
           </li>
           <li class="filter-photos-list">
+            <div class="icon-second-section-index">
+              <svg>
+                <use href="./images/icons.svg#icon-astronaut-1" width="64" height="64"></use>
+              </svg>
+            </div>
             <h3 class="first-header box-title">Technologies</h3>
             <p class="list-first">
               Design practice focused on digital experiences. We bring forth a
@@ -109,6 +129,22 @@
             <div class="filter-team-name">
               <h3 class="first-header filter-third-header">Mark Guerrero</h3>
               <p class="list-first filter-paragraph">Product Designer</p>
+              <ul class="social-media">
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
+                        height="16"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="filter-white-background box-calculations filter-team">
@@ -117,6 +153,22 @@
             <div class="filter-team-name">
               <h3 class="first-header filter-third-header">Tom Ford</h3>
               <p class="list-first filter-paragraph">Frontend Developer</p>
+              <ul class="social-media">
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
+                        height="16"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="filter-white-background filter-team box-calculations">
@@ -125,6 +177,22 @@
             <div class="filter-team-name">
               <h3 class="first-header filter-third-header">Camila Garcia</h3>
               <p class="list-first filter-paragraph">Marketing</p>
+              <ul class="social-media">
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
+                        height="16"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="filter-white-background filter-team box-calculations">
@@ -133,6 +201,22 @@
             <div class="filter-team-name">
               <h3 class="first-header filter-third-header">Daniel Wilson</h3>
               <p class="list-first filter-paragraph">UI Designer</p>
+              <ul class="social-media">
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
+                        height="16"></use>
+                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
+                        height="16"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
