--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <ul class="list box-position">
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
-              <svg>
-                <use href="./images/icons.svg#icon-antenna-1" width="64" height="64"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Strategy</h3>
@@ -62,8 +62,8 @@
           </li>
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
-              <svg>
-                <use href="./images/icons.svg#icon-clock-1" width="64" height="64"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Punctuality</h3>
@@ -74,8 +74,8 @@
           </li>
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
-              <svg>
-                <use href="./images/icons.svg#icon-diagram-1" width="64" height="64"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Diligence</h3>
@@ -86,8 +86,8 @@
           </li>
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
-              <svg>
-                <use href="./images/icons.svg#icon-astronaut-1" width="64" height="64"></use>
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Technologies</h3>
@@ -132,15 +132,11 @@
               <ul class="social-media">
                 <li class="social-icons">
                   <a class="social-icons-filter">
-                    <svg>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
-                        height="16"></use>
+                    <svg class="icon-fourth-section-index" width="16" height="16">
+                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
                 </li>
@@ -156,15 +152,11 @@
               <ul class="social-media">
                 <li class="social-icons">
                   <a class="social-icons-filter">
-                    <svg>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
-                        height="16"></use>
+                    <svg class="icon-fourth-section-index" width="16" height="16">
+                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
                 </li>
@@ -180,15 +172,11 @@
               <ul class="social-media">
                 <li class="social-icons">
                   <a class="social-icons-filter">
-                    <svg>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
-                        height="16"></use>
+                    <svg class="icon-fourth-section-index" width="16" height="16">
+                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
                 </li>
@@ -204,15 +192,11 @@
               <ul class="social-media">
                 <li class="social-icons">
                   <a class="social-icons-filter">
-                    <svg>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-1" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-2" width="16"
-                        height="16"></use>
-                      <use class="icon-fourth-section-index" href="./images/icons.svg#icon-Ellipse-3" width="16"
-                        height="16"></use>
+                    <svg class="icon-fourth-section-index" width="16" height="16">
+                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
                 </li>
@@ -224,15 +208,31 @@
     </section>
 
   </main>
-  <footer class="main-title-background footer-position">
-    <div class="container">
-      <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
-      <p class="footer-paragraph filter-footer">
-        Increase the flow of customers and <br>sales for your business with digital
-        <br>marketing & growth solutions.
-      </p>
-    </div>
-  </footer>
+  <div class="filter-container">
+    <footer class="main-title-background footer-position">
+      <div class="next-class container">
+        <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
+      </div>
+      <div class="container">
+        <p class="social-filter">Social media</p>
+        <ul class="footer-icons">
+          <li class="footer-icons-list">
+            <a href="" class="footer-link-list">
+              <svg class="footer-single-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Ellipse"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <p class="footer-paragraph filter-footer">
+          Increase the flow of customers and <br>sales for your business with digital
+          <br>marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
