--- a/portfolio.html
+++ b/portfolio.html
@@ -166,15 +166,31 @@
       </div>
     </section>
   </main>
-  <footer class="main-title-background footer-position">
-    <div class="container">
-      <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
-      <p class="footer-paragraph filter-footer">
-        Increase the flow of customers and <br>sales for your business with digital
-        <br>marketing & growth solutions.
-      </p>
-    </div>
-  </footer>
+  <div class="filter-container">
+    <footer class="main-title-background footer-position">
+      <div class="next-class container">
+        <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
+      </div>
+      <div class="container">
+        <p class="social-filter">Social media</p>
+        <ul class="footer-icons">
+          <li class="footer-icons-list">
+            <a href="" class="footer-link-list">
+              <svg class="footer-single-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-Ellipse"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <p class="footer-paragraph filter-footer">
+          Increase the flow of customers and <br>sales for your business with digital
+          <br>marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
