--- a/index.html
+++ b/index.html
@@ -134,8 +134,26 @@
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
@@ -154,8 +172,26 @@
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
@@ -174,8 +210,26 @@
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
@@ -194,8 +248,26 @@
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons">
+                  <a class="social-icons-filter">
+                    <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-Ellipse-3"></use>
                     </svg>
                   </a>
@@ -212,8 +284,12 @@
     <footer class="main-title-background footer-position">
       <div class="next-class container">
         <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
+        <p class="footer-paragraph filter-footer">
+          Increase the flow of customers and <br>sales for your business with digital
+          <br>marketing & growth solutions.
+        </p>
       </div>
-      <div class="container">
+      <div>
         <p class="social-filter">Social media</p>
         <ul class="footer-icons">
           <li class="footer-icons-list">
@@ -224,12 +300,6 @@
             </a>
           </li>
         </ul>
-      </div>
-      <div>
-        <p class="footer-paragraph filter-footer">
-          Increase the flow of customers and <br>sales for your business with digital
-          <br>marketing & growth solutions.
-        </p>
       </div>
     </footer>
   </div>
