--- a/portfolio.html
+++ b/portfolio.html
@@ -166,9 +166,9 @@
       </div>
     </section>
   </main>
-  <div class="filter-container">
-    <footer class="main-title-background footer-position">
-      <div class="next-class container">
+  <footer class="main-title-background footer-position">
+    <div class="footer">
+      <div class="next-class">
         <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
         <p class="footer-paragraph filter-footer">
           Increase the flow of customers and <br>sales for your business with digital
@@ -178,6 +178,7 @@
       <div>
         <p class="social-filter">Social media</p>
         <ul class="footer-icons">
+
           <li class="footer-icons-list">
             <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
@@ -185,10 +186,31 @@
               </svg>
             </a>
           </li>
+          <li class="footer-icons-list">
+            <a class="footer-link-list">
+              <svg class="footer-single-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-Ellipse-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icons-list">
+            <a class="footer-link-list">
+              <svg class="footer-single-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-Ellipse-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-icons-list">
+            <a class="footer-link-list">
+              <svg class="footer-single-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-Ellipse-3"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
       </div>
-    </footer>
-  </div>
+    </div>
+  </footer>
 </body>
 
 </html>
