feat: init9 hw4

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna-1"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Strategy</h3>
@@ -63,7 +63,7 @@
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-clock-1"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Punctuality</h3>
@@ -75,7 +75,7 @@
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram-1"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Diligence</h3>
@@ -87,7 +87,7 @@
           <li class="filter-photos-list">
             <div class="icon-second-section-index">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="first-header box-title">Technologies</h3>
@@ -133,28 +133,28 @@
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -171,28 +171,28 @@
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -209,28 +209,28 @@
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -247,28 +247,28 @@
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                      <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                      <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
-                      <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                      <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -279,10 +279,60 @@
       </div>
     </section>
 
+    <section class="customers">
+      <div class="container">
+        <h2 class="customers-name">Customers</h2>
+        <ul class="customers-list">
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a class="customers-link">
+              <svg class="customers-single-icon" width="104" height="56">
+                <use href="./images/icons.svg#icon-client-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
   </main>
 
   <footer class="main-title-background footer-position">
-    <div class="footer">
+    <div class="container footer">
       <div class="next-class">
         <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
         <p class="footer-paragraph filter-footer">
@@ -297,28 +347,28 @@
           <li class="footer-icons-list">
             <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
