--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
     </section>
   </main>
   <footer class="main-title-background footer-position">
-    <div class="footer">
+    <div class="container footer">
       <div class="next-class">
         <a href="/" class="logo link footer-link">WEB<span class="filter-studio-footer">Studio</span></a>
         <p class="footer-paragraph filter-footer">
@@ -179,28 +179,28 @@
           <li class="footer-icons-list">
             <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-1"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-2"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
             <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Ellipse-3"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
