feat: init10 hw4

--- a/index.html
+++ b/index.html
@@ -207,20 +207,20 @@
               <p class="list-first filter-paragraph">Marketing</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons">
+                <li class="link social-icons">
                   <a class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
@@ -228,7 +228,7 @@
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -284,35 +284,35 @@
         <h2 class="customers-name">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icons">
-            <a class="customers-link">
+            <a class="link customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-1"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a class="link customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a class="link customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-3"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a class="link customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-4"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a class="link customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-5"></use>
               </svg>
@@ -345,7 +345,7 @@
         <ul class="footer-icons">
 
           <li class="footer-icons-list">
-            <a href="" class="footer-link-list">
+            <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
