--- a/portfolio.html
+++ b/portfolio.html
@@ -177,7 +177,7 @@
         <ul class="footer-icons">
 
           <li class="footer-icons-list">
-            <a href="" class="footer-link-list">
+            <a class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
