feat: init11 hw4

--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
               <p class="list-first filter-paragraph">Product Designer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -169,28 +169,28 @@
               <p class="list-first filter-paragraph">Frontend Developer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -245,28 +245,28 @@
               <p class="list-first filter-paragraph">UI Designer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a class="link social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
