feat: init13 hw4

--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
               <p class="list-first filter-paragraph">Product Designer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -169,28 +169,28 @@
               <p class="list-first filter-paragraph">Frontend Developer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -207,28 +207,28 @@
               <p class="list-first filter-paragraph">Marketing</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -245,28 +245,28 @@
               <p class="list-first filter-paragraph">UI Designer</p>
               <ul class="social-media">
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-icons">
-                  <a class="social-icons-filter">
+                  <a href="" class="social-icons-filter">
                     <svg class="icon-fourth-section-index" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -284,42 +284,42 @@
         <h2 class="customers-name">Customers</h2>
         <ul class="customers-list">
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-1"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-3"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-4"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-5"></use>
               </svg>
             </a>
           </li>
           <li class="customers-icons">
-            <a class="customers-link">
+            <a href="" class="customers-link">
               <svg class="customers-single-icon" width="104" height="56">
                 <use href="./images/icons.svg#icon-client-6"></use>
               </svg>
@@ -345,28 +345,28 @@
         <ul class="footer-icons">
 
           <li class="footer-icons-list">
-            <a class="footer-link-list">
+            <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
-            <a class="footer-link-list">
+            <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
-            <a class="footer-link-list">
+            <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="footer-icons-list">
-            <a class="footer-link-list">
+            <a href="" class="footer-link-list">
               <svg class="footer-single-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
