feat: init14 hw4

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       </nav>
       <address class="filter-address nav-position">
         <ul class="list mail">
-          <li><a href="mailto:info@devstudio.com" class="address filter-address link list-first">info@devstudio.com</a>
+          <li><a href="mailto:info@devstudio.com"
+              class="address filter-address link address-font">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111" class="address filter-address link list-first inside-contacts">+11 (000)
+          <li><a href="tel:+110001111111" class="address filter-address link address-font inside-contacts">+11 (000)
               111-11-11</a></li>
         </ul>
       </address>
@@ -55,7 +56,7 @@
               </svg>
             </div>
             <h3 class="first-header box-title">Strategy</h3>
-            <p class="list-first">
+            <p class="address-font">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -67,7 +68,7 @@
               </svg>
             </div>
             <h3 class="first-header box-title">Punctuality</h3>
-            <p class="list-first">
+            <p class="address-font">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
@@ -79,7 +80,7 @@
               </svg>
             </div>
             <h3 class="first-header box-title">Diligence</h3>
-            <p class="list-first">
+            <p class="address-font">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
@@ -91,7 +92,7 @@
               </svg>
             </div>
             <h3 class="first-header box-title">Technologies</h3>
-            <p class="list-first">
+            <p class="address-font">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
